--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,15 @@
         }
     ],
     "require": {
-	    "php": "^7.3",
+	    "php": ">=7.3",
         "ext-json": "*",
         "gebruederheitz/wp-simple-rest": "^2.0"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.4",
+        "szepeviktor/phpstan-wordpress": "^1.0"
+    },
+    "scripts": {
+        "lint": "phpstan analyse -c .phpstan.neon"
     }
 }
